--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.gitignore.io/api/java,linux,macos,gradle,windows,intellij+all,elasticbeanstalk
-# Edit at https://www.gitignore.io/?templates=java,linux,macos,gradle,windows,intellij+all,elasticbeanstalk
+# Created by https://www.gitignore.io/api/linux,macos,gradle,windows,intellij+all,elasticbeanstalk
+# Edit at https://www.gitignore.io/?templates=linux,macos,gradle,windows,intellij+all,elasticbeanstalk
 
 ### ElasticBeanstalk ###
 .elasticbeanstalk/*
@@ -92,31 +92,6 @@ modules.xml
 # Sonarlint plugin
 .idea/sonarlint
 
-### Java ###
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 ### Linux ###
 *~
 
@@ -205,4 +180,4 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
-# End of https://www.gitignore.io/api/java,linux,macos,gradle,windows,intellij+all,elasticbeanstalk
+# End of https://www.gitignore.io/api/linux,macos,gradle,windows,intellij+all,elasticbeanstalk
